assets/styles/main.css
body{
    background: url("../images/xv.png");
    color: #B6895F;
}
.logo-div{
    margin-top: -90px;
    display: flex;
    justify-content: center;
    align-items: center;

}
.logo{
    width: 130px;
    height: 130px;

    /*position: absolute;
    top:-80px;*/
}
h3 {
    text-align: center;
    padding-bottom: 2rem;
}

form{
    position: relative;
    background: #2B2C2E;
    -webkit-box-shadow: 0px 0px 27px -2px rgba(38,38,38,1);
    -moz-box-shadow: 0px 0px 27px -2px rgba(38,38,38,1);
    box-shadow: 0px 0px 27px -2px rgba(38,38,38,1);
    border-radius: 0.25rem;
    margin: 5vh auto 0 auto;
    padding: 5%;
    min-width: 25vw;
    max-width: 35vw;
}


input, select{
    background: #3E3D42 !important;
    color: #F3F4F2 !important;
    border: 2px solid #A49284 !important;
}
option{

}
/*.form-control:focus {
    border-color: inherit;
    -webkit-box-shadow: none;
    box-shadow: none;
}*/
input[type=number]{
    line-height: 34px;
}

input[type=number]::-webkit-inner-spin-button {
    height: 34px;
    border-radius: 0.25rem !important;
    background: #A49284 !important;
    color: #2B2C2E;
    position: relative;
    right: -11px;
}
.form-control:focus {
    border-color: #e9e9e9;
    box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.075) inset, 0px 0px 8px rgba(233, 233, 233, 0.5);
}
.form-group{
    padding: 0 20%;

}


select{

    margin: auto;
    width: 336px !important;
}

.customSelect:hover{
    background: #B6895F !important;
    color: #e9e9e9 !important;
}

#textarea{
    background: #EBEBEB !important;
    color: #B6895F;
}

.submit-btn{
    display: flex;
    justify-content: center;
    align-content: center;
    align-items: center;
    margin: auto;
}

.btn{
    background: #B6895F;
    color: #2B2C2E;
    border: 1px solid #e9e9e9;

}



.btn:hover{
    border: 1px solid #B6895F;
    color: #B6895F;
    background: none;
}

